# Agentic-Research-Landfill

./: Content_Collector.py  Lang_Ext_Test.py  log
chunking/: .env  agentic_rag.py  api.py  chuncking.py  pyproject.toml
docs/jira/: .env
docs/jira/OAGolive/post2OA/: post2OA.groovy  post2OA_instant.groovy  tmp.groovy
docs/jira/OAGolive/postRecv/: eformPoseRecv.groovy  postRecv.groovy  postRecvSimp.groovy  postRecvTest.groovy  postrecvNew.groovy
docs/jira/Script/CIPR/: PM.groovy
docs/jira/Script/golive/eformSend/: dformsnd.groovy  lockScreen.groovy  returnStatus.groovy  tmp.groovy
docs/jira/Script/golive/rformRecv/: eformRecv.groovy  shit.groovy
docs/jira/Script/pms/: overdue.groovy
docs/jira/autoPM/: requirements.txt  workflow.py
docs/jira/externalConnection/: dbConn.groovy
docs/jira/issueAttribute/: IssueTypeSchemeMigration.groovy
docs/jira/other/: askReason_stg.groovy  autoWorkflow.groovy  teamres.groovy
