[project]
name = "chunking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "graphiti-core>=0.18.9",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.29",
    "langchain-text-splitters>=0.3.9",
    "langgraph>=0.6.3",
]
